# palautusreporsitorio

./: README.md
viikko1/nhl-statistics/src/tests/: test_statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/poetry-test/: pyproject.toml
viikko2/poetry-web/: pyproject.toml
