[project]
name = "testi"
version = "0.1.0"
description = ""
authors = [
    {name = "petrovaana",email = "petrova.anastasiahusu@gmail.com"}
]

requires-python = "^3.12"
dependencies = ["cowsay (>=6.1,<7.0)"]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
